# hptls

./: .clippy.toml  .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/scripts/: setup-deps.sh
.github/workflows/: ci.yml  security.yml
benchmarks/: Cargo.toml
benchmarks/benches/: handshake.rs  throughput.rs
examples/: README.md  dtls_client.rs  dtls_server.rs  echo_server.rs  https_client.rs  https_server.rs  simple_client.rs  simple_server.rs
hptls/: Cargo.toml
hptls-core/: Cargo.toml
hptls-core/src/: alert.rs  certificate_validator.rs  cipher.rs  connection_rate_tracker.rs  cookie_manager.rs  dtls.rs  dtls_handshake.rs  early_data.rs  ech.rs  ech_helpers.rs  error.rs  extension_types.rs  extensions.rs  grease.rs  handshake_io.rs  key_schedule.rs  lib.rs  pqc.rs  protocol.rs  psk.rs  quic.rs  record.rs  record_protection.rs  signature_verify.rs  state.rs  ticket_encryption.rs  transcript.rs  x509_simple.rs
hptls-core/src/dtls/: handshake.rs  mod.rs  record_protection.rs
hptls-core/src/handshake/: client.rs  mod.rs  server.rs
hptls-core/src/messages/: ack.rs  certificate.rs  certificate_request.rs  certificate_verify.rs  client_hello.rs  encrypted_extensions.rs  end_of_early_data.rs  finished.rs  hello_retry_request.rs  key_update.rs  mod.rs  new_connection_id.rs  new_session_ticket.rs  server_hello.rs
hptls-core/src/tls12/: certificate_parser.rs  cipher_suites.rs  client.rs  extensions.rs  key_exchange.rs  mod.rs  prf.rs  record.rs  server.rs
hptls-core/src/tls12/messages/: certificate.rs  client_key_exchange.rs  mod.rs  server_hello_done.rs  server_key_exchange.rs
hptls-core/tests/: alert_handling.rs  crypto_algorithms_integration.rs  debug_app_secrets.rs  debug_chacha20_issue.rs  dtls_integration.rs  dtls_interop_openssl.rs  dtls_packet_format.rs  early_data_integration.rs  ecdsa_p256_certificate_integration.rs  ech_retry_integration.rs  encrypted_communication.rs  handshake_integration.rs  key_schedule_integration.rs  key_update.rs  new_session_ticket_integration.rs  openssl_interop.rs  performance_quick.rs  pqc_dtls_integration.rs  psk_offer_integration.rs  psk_resumption_integration.rs  record_layer_crypto_integration.rs  rfc8448_test_vectors.rs  rsa_pss_certificate_integration.rs  server_mtls_methods.rs  session_resumption_integration.rs  test_ed25519_verify.rs  tls12_full_handshake.rs  tls12_handshake_flow.rs  tls12_integration.rs  wire_format_compliance.rs
hptls-core/tests/data/: rsa_server_cert.der  rsa_server_key.der
hptls-core/tests/dtls/: integration.rs  interop_openssl.rs  packet_format.rs  pqc_integration.rs
hptls-crypto/: Cargo.toml  README.md
hptls-crypto-hpcrypt/: Cargo.toml
hptls-crypto-hpcrypt/benches/: rsa_pss_bench.rs
hptls-crypto-hpcrypt/src/: aead.rs  der.rs  fips_root.rs  hash.rs  header_protection.rs  hkdf.rs  hmac.rs  hpke_adapter.rs  hpke_impl.rs  hybrid_kem.rs  kex.rs  lib.rs  mldsa.rs  mlkem.rs  random.rs  rsa_bridge.rs  signature.rs  slhdsa.rs
hptls-crypto-hpcrypt/src/fips/: csp.rs  mod.rs  state.rs
hptls-crypto-hpcrypt/src/fips/kat/: kat_chacha20.rs  kat_ecdh.rs  kat_eddsa.rs  kat_hkdf.rs  kat_rsa_pss.rs  mod.rs
hptls-crypto-hpcrypt/src/fips_kat/: kat_aes_gcm.rs  kat_ecdsa.rs  kat_rsa_pss.rs  mod.rs
hptls-crypto-hpcrypt/tests/: crypto_primitives_bench.rs  hpcrypt_rsa_bug_reproduction.rs  rsa_deterministic_crash.rs  rsa_pss_openssl_interop.rs  rsa_pss_performance.rs
hptls-crypto-hpcrypt/tests/data/: kat_message.txt  rsa_private_pkcs8.der  rsa_public_spki.der  test_message.txt
hptls-crypto-hpcrypt/tests/data/chain/: intermediate-ca.der  root-ca.der  server.der  server.key.der
hptls-crypto-hpcrypt/tests/data/ecdsa-chain/: generate_ecdsa_chain.sh  intermediate-ca.crt  intermediate-ca.csr  intermediate-ca.der  intermediate-ca.key  root-ca.crt  root-ca.der  root-ca.key  server.crt  server.csr  server.der  server.key  server.key.der  server.key.raw
hptls-crypto/src/: aead.rs  error.rs  hash.rs  header_protection.rs  hmac.rs  hpke.rs  kdf.rs  key_exchange.rs  lib.rs  random.rs  signature.rs
hptls-sys/: Cargo.toml
hptls-sys/src/: freebsd.rs  lib.rs  linux.rs  windows.rs
hptls/src/: client.rs  dtls.rs  lib.rs  server.rs  stream.rs
